updating to Junit 5